--- a/index.html
+++ b/index.html
@@ -247,8 +247,7 @@
                         <i class="fas fa-user-secret"></i> Security Researcher
                     </div>
                     <h3>Mengamankan Sistem, Melindungi Data</h3>
-                    <p>Sebagai seorang <strong>Bug Hunter</strong> dan <strong>Server Management Enthusiast</strong>, saya fokus pada identifikasi kerentanan keamanan dan penguatan infrastruktur web serta pengelolaan server game. Dengan pengalaman lebih dari 2 tahun dalam administrasi Linux server, 1+ tahun di bisnis hosting/server game dan pengalaman 1 tahun menjadi pentester.</p>
-                    
+                    <p>Hai nama saya Nadio Henda Pradana saya adalah siswa kelas 12 yang masih belajar menjadi bug hunter, sebagai seorang <strong>Bug Hunter</strong> dan <strong>Server Management Enthusiast</strong>, saya fokus pada identifikasi kerentanan keamanan dan penguatan infrastruktur web serta pengelolaan server game. Dengan pengalaman lebih dari 2 tahun dalam administrasi Linux server, 1+ tahun di bisnis hosting/server game dan pengalaman 1 tahun menjadi pentester.</p>                    
                     <div class="about-features">
                         <div class="feature">
                             <i class="fas fa-search"></i>
@@ -704,4 +703,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
