--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                     <div class="report-card">
                         <div class="report-header">
                             <span class="report-severity critical">CRITICAL</span>
-                            <span class="report-platform">Mobile App</span>
+                            <span class="report-platform">Web Application</span>
                         </div>
                         <h4>Remote Code Execution</h4>
                         <p>Identified RCE vulnerability with CVE-2025-55182</p>
@@ -705,3 +705,4 @@
 </body>
 
 </html>
+
